tests/machine/x/ocaml/group_by_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_join.ml", line 37, characters 72-73:
37 |     __res0 := [("name",Obj.repr (g.key));("count",Obj.repr (List.length g))] :: !__res0
                                                                             ^
Error: This expression has type ('a, 'b) group
       but an expression was expected of type 'c list


Context (around line 37):
  35 |   List.iter (fun (gKey,gItems) ->
  36 |     let g = { key = gKey; items = List.rev gItems } in
  37 |     __res0 := [("name",Obj.repr (g.key));("count",Obj.repr (List.length g))] :: !__res0
  38 |   ) !__groups0;
  39 |   List.rev !__res0)
